BET-29 add crawler SaaS console support
